<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParticipantsNumberSettingActivity">

    <RadioGroup
        android:id="@+id/WomanRadioGroup"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/OneGirl"
        app:layout_constraintBottom_toBottomOf="@+id/ManRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ManRadioGroup"
        app:layout_constraintTop_toTopOf="@+id/ManRadioGroup">

        <RadioButton
            android:id="@+id/OneGirl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_w"
            android:button="@null"
            android:gravity="center"
            android:text="1人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/TwoGirls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_w"
            android:button="@null"
            android:gravity="center"
            android:text="2人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/ThreeGirls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_w"
            android:button="@null"
            android:gravity="center"
            android:text="3人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/FourGirls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_w"
            android:button="@null"
            android:gravity="center"
            android:text="4人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/FiveGirls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_w"
            android:button="@null"
            android:gravity="center"
            android:text="5人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/SixGirls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_w"
            android:button="@null"
            android:gravity="center"
            android:text="6人"
            android:textSize="24sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/ManRadioGroup"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/OneBoy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/WomanRadioGroup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003">

        <RadioButton
            android:id="@+id/OneBoy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_m"
            android:button="@null"
            android:gravity="center"
            android:text="1人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/TwoBoys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_m"
            android:button="@null"
            android:gravity="center"
            android:text="2人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/ThreeBoys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_m"
            android:button="@null"
            android:gravity="center"
            android:text="3人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/FourBoys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_m"
            android:button="@null"
            android:gravity="center"
            android:text="4人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/FiveBoys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_m"
            android:button="@null"
            android:gravity="center"
            android:text="5人"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/SixBoys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radio_center_m"
            android:button="@null"
            android:gravity="center"
            android:text="6人"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/BackButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/BackText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetParticipantsNumText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/BoysText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/ManRadioGroup"
        app:layout_constraintEnd_toEndOf="@+id/ManRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/ManRadioGroup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/GirlsText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/WomanRadioGroup"
        app:layout_constraintEnd_toEndOf="@+id/WomanRadioGroup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/WomanRadioGroup"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/DecisionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DecisionButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ManRadioGroup" />

    <TextView
        android:id="@+id/testIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DecisionButton"
        tools:text="0000" />
</androidx.constraintlayout.widget.ConstraintLayout>